syntax = "proto3";

package grpc;

option go_package = https://github.com/dmoyan0/TareasSD/tree/main/proto

service WishListService {
    rpc GetMunitionInfo(Empty) returns (MunitionInfoResponse);
}

message Empty {}

message MunitionInfoResponse {
    int32 municion_at = 1;
    int32 municion_mp = 2;
    int32 max_at = 3;
    int32 max_mp = 4;
}